--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,9 +10,7 @@
       .span10.offset1
         .hero-unit.text-center
           %h1
-            = link_to "Hallo", root_path
-          %p
-            Welcome
+            = link_to "Farmer's Almanac", root_path
           = link_to 'New Crop', new_planting_task_path,  class:  'btn btn-primary'
     .container
       = yield
