--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,8 +10,22 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require bootstrap-datepicker
  *= require_tree .
  *= require_self
+
  */
 
 @import  'bootstrap';
+$header-img: image-url('brooks.jpg');
+
+
+.hero-unit {
+  background-image: $header-img;
+  background-size: 1100px 221px;
+
+  a {
+    color: white;
+  }
+}
+
