--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,3 +33,7 @@ $header-img: image-url('brooks.jpg');
   background-color: #BFBFBF;
   background-image: none;
 }
+
+table {
+  margin-top: 10px;
+}
