--- a/app/views/planting_tasks/filtered_index.html.haml
+++ b/app/views/planting_tasks/filtered_index.html.haml
@@ -1,11 +1,15 @@
 - @scopes.each do |scope|
   .btn.scope{data: {name: scope.to_s.titleize }}= link_to "#{scope.to_s.titleize}", root_path(scope: scope)
 - if @tasks.empty?
-  %span.text-warning There are no crops!
+  %h2 No matching crops
 - else
   %h2
     - if @scope
-      %span.scope-name= @scope.to_s.titleize
+      - if @scope == "planted_on"
+        Planted On
+        = @date.strftime("%m/%d/%y")
+      - else
+        %span.scope-name= @scope.to_s.titleize
     - else
       All crops
   %table.table.table-hover.table-bordered
@@ -13,8 +17,8 @@
       %tr
         %th Name
         %th Plant By
-        %th Planted At
-        %th Harvested
+        %th Planted On
+        %th Harvested On
     %tbody
       - @tasks.each do |task|
         %tr
@@ -22,7 +26,7 @@
             %strong= link_to task.name, edit_planting_task_path(task)
           %td.text-info= task.ideal_planting_date.strftime("%m/%d/%y")
           - if task.planted_at?
-            %td.text-info= task.planted_at.strftime("%m/%d/%y")
+            %td.text-info= link_to_date(task.planted_at)
           - else
             %td
           - if task.completed?
