--- a/app/views/planting_tasks/filtered_index.html.haml
+++ b/app/views/planting_tasks/filtered_index.html.haml
@@ -1,39 +1,41 @@
-%p
-  = link_to 'New Crop', new_planting_task_path,  class:  'btn btn-primary'
-- @scopes.each do |scope|
-  .btn.scope{data: {name: scope.to_s.titleize }}= link_to "#{scope.to_s.titleize}", root_path(scope: scope)
-- if @tasks.empty?
-  %h2 No matching crops
-- else
-  %h2
-    - if @scope
-      - if @scope == "planted_on"
-        Planted On
-        = @date
+.container
+  %p
+    = link_to 'New Crop', new_planting_task_path,  class:  'btn btn-primary'
+  - @scopes.each do |scope|
+    .btn.scope{data: {name: scope.to_s.titleize }}= link_to "#{scope.to_s.titleize}", root_path(scope: scope)
+  - if @tasks.empty?
+    %h2 No matching crops
+  - else
+    %h2
+      - if @scope
+        - if @scope == "planted_on"
+          Planted On
+          = @date
+        - else
+          %span.scope-name= @scope.to_s.titleize
       - else
-        %span.scope-name= @scope.to_s.titleize
-    - else
-      All crops
-  %table.table.table-hover.table-bordered
-    %thead
-      %tr
-        %th Name
-        %th Plant By
-        %th Planted On
-        %th Harvested On
-    %tbody
-      - @tasks.each do |task|
+        All crops
+    %table.table.table-hover.table-bordered
+      %thead
         %tr
-          %td
-            %strong= link_to task.name, edit_planting_task_path(task)
-          %td.text-info= task.ideal_planting_date.strftime("%m/%d/%Y")
-          - if task.planted_at?
-            %td.text-info= link_to_date(task.planted_at)
-          - else
+          %th Name
+          %th Plant By
+          %th Planted On
+          %th Harvested On
+          %th
+      %tbody
+        - @tasks.each do |task|
+          %tr
             %td
-          - if task.completed?
-            %td.text-success= task.completed.strftime("%m/%d/%Y")
-          - else
-            %td
-          %td.text-info= link_to "Delete", planting_task_path(task), method: :delete
+              %strong= link_to task.name, edit_planting_task_path(task)
+            %td.text-info= task.ideal_planting_date.strftime("%m/%d/%Y")
+            - if task.planted_at?
+              %td.text-info= link_to_date(task.planted_at)
+            - else
+              %td
+            - if task.completed?
+              %td.text-success= task.completed.strftime("%m/%d/%Y")
+            - else
+              %td
+            %td.text-info= link_to "Delete", planting_task_path(task), method: :delete
 
