--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     = csrf_meta_tags
   %body
     .row-fluid
-      .span10.offset1
+      .span12
         .hero-unit.text-center
           %h1
             = link_to "Farmer's Almanac", root_path
