--- a/app/views/planting_tasks/filtered_index.html.haml
+++ b/app/views/planting_tasks/filtered_index.html.haml
@@ -1,8 +1,9 @@
 .container
   %p
     = link_to 'New Crop', new_planting_task_path,  class:  'btn btn-primary'
-  - @scopes.each do |scope|
-    .btn.scope{data: {name: scope.to_s.titleize }}= link_to "#{scope.to_s.titleize}", root_path(scope: scope)
+  .btn-group
+    - @scopes.each do |scope|
+      .btn.scope{data: {name: scope.to_s.titleize }}= link_to "#{scope.to_s.titleize}", root_path(scope: scope)
   - if @tasks.empty?
     %h2 No matching crops
   - else
