Fix #4: Indicate scope using css

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -38,7 +38,7 @@ body {
 }
 
 .scope {
-  &.selected {
+  &[data-selected="true"] {
     background-color: #BFBFBF;
     background-image: none;
   }
